fix: remove horizontal scroll on small screen

--- a/css-selectors/src/sass/layout/_body.scss
+++ b/css-selectors/src/sass/layout/_body.scss
@@ -12,5 +12,6 @@ body {
 
   @include media-tablet {
     grid-template-columns: 1fr;
+    overflow: hidden;
   }
 }
