--- a/css-selectors/src/sass/style.css
+++ b/css-selectors/src/sass/style.css
@@ -57,6 +57,7 @@ body {
 @media screen and (max-width: 850px) {
   body {
     grid-template-columns: 1fr;
+    overflow: hidden;
   }
 }
 
